# projeto-petroleo-brent

./: README.md  app.py  pyproject.toml
notebooks/: 01_data_cleaning.ipynb  prevendo_os_valores.ipynb  previsao_final.ipynb
