[tool.poetry]
name = "projeto-petroleo-brent"
version = "0.1.0"
description = "Projeto de Pós Gradução"
authors = ["Gleice Souza <gleice.ssouza@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
datetime = "^5.5"
ipeadatapy = "^0.1.9"
yfinance = "^0.2.50"
prophet = "^1.1.6"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
