[tool.poetry]
name = "projeto-petroleo-brent"
version = "0.1.0"
description = "Projeto de Pós Gradução"
authors = ["Gleice Souza <gleice.ssouza@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
datetime = "^5.5"
ipeadatapy = "^0.1.9"
yfinance = "^0.2.50"
statsmodels = "^0.14.4"
cmdstanpy = "^1.2.4"
prophet = "^1.1.6"
streamlit = "^1.40.2"
plotly = "^5.24.1"
scipy = "^1.14.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"
pyforest = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
